syntax = "proto3";

package users;
import "google/protobuf/empty.proto";

message User {
    int32 id = 1;
    string name = 2;
}

message UserRequest {
    int32 id = 1;
}
message CreateUsersResponse {
    repeated User user = 1;
}

service Users {
    rpc GetUser(UserRequest) returns (User) {};
    rpc GetUsers(google.protobuf.Empty) returns (stream User) {};
    rpc CreateUsers(stream UserRequest) returns (CreateUsersResponse) {};
}